[package]
name = "ol-ratelimiter"
version = "0.1.0"
edition = "2018"

[dependencies]
diem-workspace-hack = { path = "../../common/workspace-hack" }
diem-logger = { path = "../../common/logger" }
diem-metrics = { path = "../../common/metrics" }
futures = "0.3.12"
pin-project = "1.0.5"
tokio = { version = "1.3.0", features = ["full"] }
tokio-util = { version = "0.6.4", features = ["compat"] }
diem-infallible = { path = "../../common/infallible"}

