[package]
name = "abigen-eth"
version = "0.1.0"
authors = ["coin1111 <celticsnow123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1.0.57"
ethers = { git = "https://github.com/coin1111/abigen-ethers-rs-0.1.3", rev="bf7933afcd18ca46e2828160b341b5c77ab96125" }
ethers-contract-abigen = { git = "https://github.com/coin1111/abigen-ethers-rs-0.1.3" , rev="bf7933afcd18ca46e2828160b341b5c77ab96125" }
