[package]
name = "bridge-ol"
version = "0.1.0"
authors = ["coin1111 <celticsnow123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diem-json-rpc-client = { path = "../../../client/json-rpc", version = "0.1.0" }
diem-json-rpc-types = { path = "../../../json-rpc/types" }
diem-types = { path = "../../../types/" }
ol-types = { path = "../../../ol/types"}
diem-transaction-builder = { path = "../../../sdk/transaction-builder" }
uuid = { version = "0.8", features = ["v4"] }
anyhow = "1.0.56"
diem-crypto = { path = "../../../crypto/crypto" }
diem-global-constants = { path = "../../../config/global-constants", version = "0.1.0"}
ol-keys = { path = "../../../ol/keys/", version = "0.1.0" }
diem-secure-storage = { path = "../../../secure/storage", version = "0.1.0" }
diem-wallet = { path = "../../../testsuite/cli/diem-wallet", version = "0.1.0" }
reqwest = { version = "0.11.2", features = ["blocking", "json"], default_features = false }
cli = { path = "../../../testsuite/cli/", version = "0.1.0" }
serde_json = "1.0"
