[package]
name = "integration-tests"
version = "0.1.0"
authors = ["coin1111 <celticsnow123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bridge-ol = { path = "../bridge-ol/" }
diem-types = { path = "../../../types/" }
ol-types = { path = "../../../ol/types"}
uuid = {version = "0.8.2"}
hex = "0.4"
